Fixed z-index issue

--- a/public/stylesheets/so_sassy.scss
+++ b/public/stylesheets/so_sassy.scss
@@ -26,6 +26,7 @@
 
 // Variables
 // ----------------------------------------------------------->
+$sexy-blue: #0099FF;
 $link1-location: translate(-215px, -155px);
 $link2-location: translate(-30px, -155px);
 $link3-location: translate(150px, -155px);
@@ -107,6 +108,7 @@ $link-locations: $link1-location, $link2-location, $link3-location, $link4-locat
       @include border-radius(10px);
       width: 81px;
       height: 81px;
+      z-index: 0;
     }
   }
 }
@@ -128,7 +130,7 @@ $link-locations: $link1-location, $link2-location, $link3-location, $link4-locat
   margin-left: 240px;
   width: 20px;
   height: 20px;
-  border: 4px solid #0099FF;
+  border: 4px solid $sexy-blue;
   z-index: -1;
   opacity: 0.5;
   &:hover { opacity: 1; }
